--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["typescript", "node", "eslint", "prettier", "jest"],  
+  "type": "module",
+  "keywords": ["typescript", "node", "eslint", "prettier", "jest"],
   "author": "",
   "license": "ISC",
   "dependencies": {
