added and config typescript

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,29 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/app.ts",
   "scripts": {
-    "start": "nodemon serve.js",
+    "start": "nodemon ./build/src/serve.js",
+    "build": "npm run clean && npm run compile-ts",
+    "clean": "rm -rf build",
+    "compile-ts": "tsc --project ./",
+    "compile-ts-watch-mode": "tsc -w --project ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "tsconfig": "tsconfig.json",
   "type": "module",
-  "keywords": ["typescript", "node", "eslint", "prettier", "jest"],
+  "types": "ts",
+  "engines": {
+    "node": ">=20.9.0",
+    "npm": ">=10.1.0"
+  },
+  "keywords": [
+    "typescript",
+    "node",
+    "eslint",
+    "prettier",
+    "jest"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -43,7 +59,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^14",
+    "@types/node": "^14.18.63",
     "@types/supertest": "^6.0.1",
     "@types/uuid": "^8.3.4",
     "eslint": "^7.29.0",
@@ -57,5 +73,13 @@
     "supertest": "^6.3.3",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
+  },
+  "nodemonConfig": {
+    "watch": ["src"],
+    "ext": "ts",
+    "ignore": ["src/**/*.test.ts"],
+    "execMap": {
+      "ts": "node -r ts-node/register"
+    }
   }
 }
