tested out npm scripts

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": ">=20.9.0",
+    "npm": ">=10.1.0"
+  },
   "main": "src/app.ts",
   "scripts": {
     "start": "nodemon ./build/src/serve.js",
@@ -11,23 +15,20 @@
     "clean": "rm -rf build",
     "compile-ts": "tsc --project ./",
     "compile-ts-watch-mode": "tsc -w --project ./",
-    "lint": "eslint . --ext .js",
+    "lint": "eslint . --ext .ts",
     "create-migration": "npx knex migrate:make",
     "migrate-up": "npx knex migrate:latest",
     "test-setup": "sh ../scripts/test_db_setup.sh",
     "db-setup": "sh ../scripts/db_setup.sh",
     "test": "jest --watchAll",
     "testEnv": "npm run build && export FOR_TESTING=y && jest",
-    "test:coverage": "jest --coverage"
-
+    "test:coverage": "jest --coverage",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "pre-push": "npm test"
   },
   "tsconfig": "tsconfig.json",
   "type": "module",
   "types": "ts",
-  "engines": {
-    "node": ">=20.9.0",
-    "npm": ">=10.1.0"
-  },
   "keywords": [
     "typescript",
     "node",
@@ -116,5 +117,107 @@
     "execMap": {
       "ts": "node -r ts-node/register"
     }
+  },
+  "eslintConfig": {
+      "ignorePatterns": [
+        "build/**"
+      ],
+      "env": {
+        "es2020": true,
+        "jest": true,
+        "node": true
+      },
+      "extends": [
+        "eslint:recommended",
+        "plugin:unicorn/recommended",
+        "./.eslintrc.ts",
+    
+        "plugin:@typescript-eslint/recommended",
+        "prettier"
+      ],
+    
+      "parser": "@typescript-eslint/parser",
+    
+      "parserOptions": {
+        "ecmaVersion": 2022,
+        "sourceType": "module"
+      },
+      "plugins": [
+        "eslint-snake-case",
+        "@typescript-eslint",
+        "unicorn"
+      ],
+      "root": true,
+    
+      "rules": {
+        "func-style": "off",
+        "semi": [
+          "error",
+          "never"
+        ],
+        "no-async-promise-executor": 0,
+        "no-unused-vars": "warn",
+        "unicorn/filename-case": [
+          "error",
+          {
+            "case": "camelCase"
+          }
+        ],
+        "unicorn/better-regex": "error",
+        "unicorn/catch-error-name": "off",
+        "unicorn/consistent-function-scoping": "error",
+        "unicorn/custom-error-definition": "off",
+        "unicorn/error-message": "error",
+        "unicorn/escape-case": "error",
+        "unicorn/expiring-todo-comments": "off",
+        "unicorn/explicit-length-check": "error",
+        "unicorn/import-style": "error",
+        "unicorn/new-for-builtins": "error",
+        "unicorn/no-abusive-eslint-disable": "error",
+        "unicorn/no-array-instanceof": "error",
+        "unicorn/no-console-spaces": "error",
+        "unicorn/no-fn-reference-in-iterator": "error",
+        "unicorn/no-for-loop": "error",
+        "unicorn/no-hex-escape": "error",
+        "unicorn/no-keyword-prefix": "off",
+        "unicorn/no-nested-ternary": "error",
+        "unicorn/no-new-buffer": "error",
+        "unicorn/no-null": "off",
+        "unicorn/no-object-as-default-parameter": "error",
+        "unicorn/no-process-exit": "error",
+        "unicorn/no-reduce": "error",
+        "unicorn/no-unreadable-array-destructuring": "error",
+        "unicorn/no-unsafe-regex": "off",
+        "unicorn/no-unused-properties": "warn",
+        "unicorn/no-useless-undefined": "error",
+        "unicorn/no-zero-fractions": "error",
+        "unicorn/number-literal-case": "error",
+        "unicorn/prefer-add-event-listener": "error",
+        "unicorn/prefer-array-find": "error",
+        "unicorn/prefer-dataset": "error",
+        "unicorn/prefer-event-key": "error",
+        "unicorn/prefer-flat-map": "error",
+        "unicorn/prefer-includes": "error",
+        "unicorn/prefer-modern-dom-apis": "error",
+        "unicorn/prefer-negative-index": "error",
+        "unicorn/prefer-node-append": "error",
+        "unicorn/prefer-node-remove": "error",
+        "unicorn/prefer-number-properties": "error",
+        "unicorn/prefer-optional-catch-binding": "error",
+        "unicorn/prefer-query-selector": "error",
+        "unicorn/prefer-reflect-apply": "error",
+        "unicorn/prefer-replace-all": "off",
+        "unicorn/prefer-set-has": "error",
+        "unicorn/prefer-spread": "error",
+        "unicorn/prefer-starts-ends-with": "error",
+        "unicorn/prefer-string-slice": "error",
+        "unicorn/prefer-text-content": "error",
+        "unicorn/prefer-trim-start-end": "error",
+        "unicorn/prefer-type-error": "error",
+        "unicorn/string-content": "off",
+        "unicorn/throw-new-error": "error",
+        "unicorn/prevent-abbreviations": "off"
+    }
   }
+
 }
