added placeholder infastrucutre

--- a/backend/package.json
+++ b/backend/package.json
@@ -64,18 +64,19 @@
     "@babel/core": "^7.14.6",
     "@babel/node": "^7.14.7",
     "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-typescript": "^7.23.2",
     "@babel/preset-env": "^7.14.7",
+    "@babel/preset-typescript": "^7.23.2",
     "@types/chalk": "^2.2.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^14.18.63",
     "@types/supertest": "^6.0.1",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
-    "@types/uuid": "^8.3.4",
     "babel-jest": "^29.7.0",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.6.0",
@@ -111,113 +112,112 @@
     ]
   },
   "nodemonConfig": {
-    "watch": ["src"],
+    "watch": [
+      "src"
+    ],
     "ext": "ts",
-    "ignore": ["src/**/*.test.ts"],
+    "ignore": [
+      "src/**/*.test.ts"
+    ],
     "execMap": {
       "ts": "node -r ts-node/register"
     }
   },
   "eslintConfig": {
-      "ignorePatterns": [
-        "build/**"
+    "ignorePatterns": [
+      "build/**"
+    ],
+    "env": {
+      "es2020": true,
+      "jest": true,
+      "node": true
+    },
+    "extends": [
+      "eslint:recommended",
+      "plugin:unicorn/recommended",
+      "./.eslintrc.ts",
+      "plugin:@typescript-eslint/recommended",
+      "prettier"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "ecmaVersion": 2022,
+      "sourceType": "module"
+    },
+    "plugins": [
+      "eslint-snake-case",
+      "@typescript-eslint",
+      "unicorn"
+    ],
+    "root": true,
+    "rules": {
+      "func-style": "off",
+      "semi": [
+        "error",
+        "never"
       ],
-      "env": {
-        "es2020": true,
-        "jest": true,
-        "node": true
-      },
-      "extends": [
-        "eslint:recommended",
-        "plugin:unicorn/recommended",
-        "./.eslintrc.ts",
-    
-        "plugin:@typescript-eslint/recommended",
-        "prettier"
+      "no-async-promise-executor": 0,
+      "no-unused-vars": "warn",
+      "unicorn/filename-case": [
+        "error",
+        {
+          "case": "camelCase"
+        }
       ],
-    
-      "parser": "@typescript-eslint/parser",
-    
-      "parserOptions": {
-        "ecmaVersion": 2022,
-        "sourceType": "module"
-      },
-      "plugins": [
-        "eslint-snake-case",
-        "@typescript-eslint",
-        "unicorn"
-      ],
-      "root": true,
-    
-      "rules": {
-        "func-style": "off",
-        "semi": [
-          "error",
-          "never"
-        ],
-        "no-async-promise-executor": 0,
-        "no-unused-vars": "warn",
-        "unicorn/filename-case": [
-          "error",
-          {
-            "case": "camelCase"
-          }
-        ],
-        "unicorn/better-regex": "error",
-        "unicorn/catch-error-name": "off",
-        "unicorn/consistent-function-scoping": "error",
-        "unicorn/custom-error-definition": "off",
-        "unicorn/error-message": "error",
-        "unicorn/escape-case": "error",
-        "unicorn/expiring-todo-comments": "off",
-        "unicorn/explicit-length-check": "error",
-        "unicorn/import-style": "error",
-        "unicorn/new-for-builtins": "error",
-        "unicorn/no-abusive-eslint-disable": "error",
-        "unicorn/no-array-instanceof": "error",
-        "unicorn/no-console-spaces": "error",
-        "unicorn/no-fn-reference-in-iterator": "error",
-        "unicorn/no-for-loop": "error",
-        "unicorn/no-hex-escape": "error",
-        "unicorn/no-keyword-prefix": "off",
-        "unicorn/no-nested-ternary": "error",
-        "unicorn/no-new-buffer": "error",
-        "unicorn/no-null": "off",
-        "unicorn/no-object-as-default-parameter": "error",
-        "unicorn/no-process-exit": "error",
-        "unicorn/no-reduce": "error",
-        "unicorn/no-unreadable-array-destructuring": "error",
-        "unicorn/no-unsafe-regex": "off",
-        "unicorn/no-unused-properties": "warn",
-        "unicorn/no-useless-undefined": "error",
-        "unicorn/no-zero-fractions": "error",
-        "unicorn/number-literal-case": "error",
-        "unicorn/prefer-add-event-listener": "error",
-        "unicorn/prefer-array-find": "error",
-        "unicorn/prefer-dataset": "error",
-        "unicorn/prefer-event-key": "error",
-        "unicorn/prefer-flat-map": "error",
-        "unicorn/prefer-includes": "error",
-        "unicorn/prefer-modern-dom-apis": "error",
-        "unicorn/prefer-negative-index": "error",
-        "unicorn/prefer-node-append": "error",
-        "unicorn/prefer-node-remove": "error",
-        "unicorn/prefer-number-properties": "error",
-        "unicorn/prefer-optional-catch-binding": "error",
-        "unicorn/prefer-query-selector": "error",
-        "unicorn/prefer-reflect-apply": "error",
-        "unicorn/prefer-replace-all": "off",
-        "unicorn/prefer-set-has": "error",
-        "unicorn/prefer-spread": "error",
-        "unicorn/prefer-starts-ends-with": "error",
-        "unicorn/prefer-string-slice": "error",
-        "unicorn/prefer-text-content": "error",
-        "unicorn/prefer-trim-start-end": "error",
-        "unicorn/prefer-type-error": "error",
-        "unicorn/string-content": "off",
-        "unicorn/throw-new-error": "error",
-        "unicorn/prevent-abbreviations": "off"
+      "unicorn/better-regex": "error",
+      "unicorn/catch-error-name": "off",
+      "unicorn/consistent-function-scoping": "error",
+      "unicorn/custom-error-definition": "off",
+      "unicorn/error-message": "error",
+      "unicorn/escape-case": "error",
+      "unicorn/expiring-todo-comments": "off",
+      "unicorn/explicit-length-check": "error",
+      "unicorn/import-style": "error",
+      "unicorn/new-for-builtins": "error",
+      "unicorn/no-abusive-eslint-disable": "error",
+      "unicorn/no-array-instanceof": "error",
+      "unicorn/no-console-spaces": "error",
+      "unicorn/no-fn-reference-in-iterator": "error",
+      "unicorn/no-for-loop": "error",
+      "unicorn/no-hex-escape": "error",
+      "unicorn/no-keyword-prefix": "off",
+      "unicorn/no-nested-ternary": "error",
+      "unicorn/no-new-buffer": "error",
+      "unicorn/no-null": "off",
+      "unicorn/no-object-as-default-parameter": "error",
+      "unicorn/no-process-exit": "error",
+      "unicorn/no-reduce": "error",
+      "unicorn/no-unreadable-array-destructuring": "error",
+      "unicorn/no-unsafe-regex": "off",
+      "unicorn/no-unused-properties": "warn",
+      "unicorn/no-useless-undefined": "error",
+      "unicorn/no-zero-fractions": "error",
+      "unicorn/number-literal-case": "error",
+      "unicorn/prefer-add-event-listener": "error",
+      "unicorn/prefer-array-find": "error",
+      "unicorn/prefer-dataset": "error",
+      "unicorn/prefer-event-key": "error",
+      "unicorn/prefer-flat-map": "error",
+      "unicorn/prefer-includes": "error",
+      "unicorn/prefer-modern-dom-apis": "error",
+      "unicorn/prefer-negative-index": "error",
+      "unicorn/prefer-node-append": "error",
+      "unicorn/prefer-node-remove": "error",
+      "unicorn/prefer-number-properties": "error",
+      "unicorn/prefer-optional-catch-binding": "error",
+      "unicorn/prefer-query-selector": "error",
+      "unicorn/prefer-reflect-apply": "error",
+      "unicorn/prefer-replace-all": "off",
+      "unicorn/prefer-set-has": "error",
+      "unicorn/prefer-spread": "error",
+      "unicorn/prefer-starts-ends-with": "error",
+      "unicorn/prefer-string-slice": "error",
+      "unicorn/prefer-text-content": "error",
+      "unicorn/prefer-trim-start-end": "error",
+      "unicorn/prefer-type-error": "error",
+      "unicorn/string-content": "off",
+      "unicorn/throw-new-error": "error",
+      "unicorn/prevent-abbreviations": "off"
     }
   }
-
 }
