--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,12 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.8.4",
-    "@mui/lab": "^5.0.0-alpha.86",
     "@mui/material": "^5.8.4",
-    "@mui/styles": "^5.8.4",
+    "@mui/system": "^5.15.2",
     "@mui/x-data-grid": "^5.12.1",
-    "@mui/x-date-pickers": "^5.0.0-alpha.6",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
@@ -32,9 +30,11 @@
     "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "notistack": "^2.0.5",
-    "react": "^17.0.2",
-    "react-cookie-consent": "^6.4.1",
-    "react-dom": "^17.0.2",
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.32",
+    "react": "^18.2.0",
+    "react-cookie-consent": "^9.0.0",
+    "react-dom": "^18.2.0",
     "react-i18next": "^11.17.2",
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.3.3",
@@ -43,6 +43,7 @@
     "react-to-print": "^2.14.7",
     "recharts": "^2.1.10",
     "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
     "typescript": "^4.7.4",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
