--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.8.4",
@@ -18,9 +17,8 @@
     "@types/node": "^18.0.0",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^18.0.5",
-    "axios": "^0.21.4",
+    "axios": "^1.6.3",
     "clsx": "^1.1.1",
-    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "html-entities": "^2.3.3",
     "html-react-parser": "^1.4.14",
@@ -54,8 +52,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "format": "prettier --config .prettierrc 'src/**/*.js' --write",
-    "test": "react-scripts test",
-    "translate": "node translate-json.js src/translations/en/$npm_config_file.json es,pt AIzaSyCWWRRupvqHfSc758w9lRp3u-LEM2frVZ8"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
@@ -77,9 +74,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
-    "google-translate-api-browser": "^1.1.71",
     "lodash": "^4.17.21",
-    "moment": "^2.29.1",
     "prettier": "^2.3.2",
     "superagent": "^6.1.0",
     "superagent-promise": "^1.1.0"
