--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "lint": "eslint . --ext .ts",
     "create-migration": "npx knex migrate:make",
     "migrate-up": "npx knex migrate:latest",
-    "test-setup": "sh ../scripts/test_db_setup.sh",
+    "test-db-setup": "sh ../scripts/test_db_setup.sh",
     "db-setup": "sh ../scripts/db_setup.sh",
     "test": "jest --watchAll",
     "testEnv": "npm run build && export FOR_TESTING=y && jest",
@@ -54,6 +54,7 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "morgan": "~1.9.1",
+    "net": "^1.0.2",
     "pg": "^8.7.3",
     "semver": "^7.5.4",
     "simple-update-notifier": "^2.0.0",
