--- a/backend/package.json
+++ b/backend/package.json
@@ -93,21 +93,28 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.8.1",
-    "typescript": "^4.7.4"
+    "typescript": "^5.3.3"
   },
   "jest": {
     "preset": "ts-jest",
     "transform": {
-      "^.+\\.ts?$": "ts-jest"
+      "^.+\\.jsx?$": "babel-jest",
+      "^.+\\.ts?$": "ts-jest",
+      "^.+\\.mjs$": "babel-jest",
+      "^.+\\.js$": "babel-jest"
     },
     "testEnvironment": "node",
     "testRegex": "tests/.*\\.(test|spec)?\\.(js|ts)$",
     "moduleFileExtensions": [
       "ts",
+      "tsx",
       "js",
+      "jsx",
       "json",
       "node"
     ],
+    "esModuleInterop": true,
+    "modulePaths": ["<rootDir>/src"],
     "roots": [
       "<rootDir>/tests"
     ]
@@ -129,7 +136,7 @@
       "build/**"
     ],
     "env": {
-      "es2020": true,
+      "es2021": true,
       "jest": true,
       "node": true
     },
